fix dropdown visibility

--- a/assets/sass/components/_menu.scss
+++ b/assets/sass/components/_menu.scss
@@ -235,6 +235,7 @@ button.menu-toggle {
 		ul.menu,
 		ul.nav-menu {
 			max-height: none;
+			overflow: visible;
 
 			> li {
 				// The first level menu item
